<resources>
    <string name="app_name">Project-SS_B</string>
    <string name="textview">Textview</string>
    <string name="log_out">Log Out</string>
    <string name="patients">Patients</string>
    <string name="button">Button</string>
    <!--<string name="button">Button</string>-->
    <!--<string name="button">Button</string>-->
    <!--<string name="button">Button</string>-->
    <!--<string name="button">Button</string>-->
    <!--<string name="button">Button</string>-->
    <string name="menu">Menu</string>
    <string name="Rapport">Rapport</string>
    <string name="Locatie">Woont</string>
    <string name="Rooster">Rooster</string>
    <string name="title_activity_client_on_map">Map</string>
    <string name="goMaps">zie in Maps</string>
</resources>
